# remove_ground

./: .gitignore  CMakeLists.txt  README.md  record.txt  show_three_img.txt
config/: cmake_config.h
doc/html/: abstract__client_8h_source.html  abstract__clusterer_8h_source.html  abstract__diff_8h_source.html  abstract__image__labeler_8h_source.html  abstract__sender_8h_source.html  angle__diff_8h_source.html  annotated.html  classdepth__clustering_1_1AbstractClient-members.html  classdepth__clustering_1_1AbstractClient.html  classdepth__clustering_1_1AbstractClient__coll__graph.map  classdepth__clustering_1_1AbstractClient__coll__graph.md5  classdepth__clustering_1_1AbstractClient__inherit__graph.map  classdepth__clustering_1_1AbstractClient__inherit__graph.md5  classdepth__clustering_1_1AbstractClusterer-members.html  classdepth__clustering_1_1AbstractClusterer.html  classdepth__clustering_1_1AbstractClusterer__coll__graph.map  classdepth__clustering_1_1AbstractClusterer__coll__graph.md5  classdepth__clustering_1_1AbstractClusterer__inherit__graph.map  classdepth__clustering_1_1AbstractClusterer__inherit__graph.md5  classdepth__clustering_1_1AbstractDiff-members.html  classdepth__clustering_1_1AbstractDiff.html  classdepth__clustering_1_1AbstractDiff__coll__graph.md5  classdepth__clustering_1_1AbstractDiff__inherit__graph.map  (+259 more)
src/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp  depth_ground_remover.h  depth_ground_remover.h~  show_objects_moosmann.h  show_objects_moosmann.h~  thread.cpp
test/: helper_funcs.cpp  helper_funcs.h  test_cloud_projection.cpp
(+183 files in other folders)
